data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2565.wast
;; 4. **Multiple Imports and `br_table` Handling:**    - Include multiple imported functions in the module with a `br_table` that branches to targets invoking these functions.    - **Constraint Checked:** The correct handling of control flow and operand stack management when multiple imported functions are involved within `br_table`.    - **Reasoning:** Tests the robustness of the `br_table` instruction in managing operand stack and control flow across multiple imports.

(assert_invalid
  (module
    (import "env" "func1" (func $func1))
    (import "env" "func2" (func $func2))
    (func $test
      (block
        (block
          (block
            (br_table 0 1 2 (i32.const 3))
          )
        )
      )
    )
  )
  "unknown label"
)